fix overflow issue and improve the layout

--- a/12-profile-card/style.css
+++ b/12-profile-card/style.css
@@ -6,6 +6,7 @@
   --dark-grayish-blue:hsl(227, 10%, 46%);
   --dark-gray:hsl(0, 0%, 59%);
 
+
 }
 
 * {
@@ -23,4 +24,74 @@ body {
   font-family: 'Kumbh Sans', sans-serif;
   line-height: 1.5;
   background:var(--dark-cyan);
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
+  color:var(--very-dark-blue);
+}
+
+
+/* Hero */
+.hero__pattern {
+  position: absolute;
+  z-index:-1;
+}
+.pattern--top {
+  top:-50px;
+  left:50px;
+  top:0;
+  left:0;
+}
+
+.hero__card {
+  width:36.2rem;
+  background:#fff;
+  text-align: center;
+  border-radius: 10px;
+  position: relative;
+
+}
+.card__background {
+  width:100%;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.card__img {
+  position: absolute;
+  top: 85px;
+  left: 130px;
+
+  border-radius: 50%;
+  object-fit: cover;
+  border:5px solid #fff;
+}
+
+.card__content {
+  margin:5.5rem 0 0.8rem;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.card__heading {
+  font-size:1.8rem;
+  font-weight: bold;
+  margin-right:0.85rem;
+}
+.card__age {
+  font-size: 1.8rem;
+  color:var(--dark-grayish-blue);
+}
+.card__country {
+  font-size: 1.4rem;
+}
+
+.card__info {
+  margin-top:4rem;
+  display:flex;
+  align-items: center;
+  justify-content: space-between;
+  padding:2rem 5rem;
+  border-top:1px solid #d4d4d4;
 }
